# vector_pursuit_controller

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  code_coverage_report.info  package.xml  vector_pursuit_controller.xml
cfg/: VectorPursuitController.cfg
config/: bcr_map.pgm  bcr_map.yaml  sample_nav2_params.yaml
include/vector_pursuit_controller/: footprint_collision_checker.hpp  line_iterator.hpp  parameter_handler.hpp  utils.hpp  vector_pursuit_controller.hpp
launch/: bcr_bot_demo.launch.py
param/: vector_pure_pursuit.yaml
src/: footprint_collision_checker.cpp  parameter_handler.cpp  vector_pursuit_controller.cpp
test/: CMakeLists.txt  test_vector_pursuit.cpp
