<?xml version="1.0"?>
<package format="2">
  <name>vector_pursuit_controller</name>
  <version>0.0.0</version>
  <description>The vector_pursuit_controller package</description>
  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <nav_core plugin="${prefix}/vector_pursuit_controller.xml"/>
  </export>
</package>
